--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -36,7 +36,10 @@
 		<version.drools>5.3.3.Final</version.drools>
 		<version.resteasy>3.0.8.Final</version.resteasy>
 		<version.spring>3.1.4.RELEASE</version.spring>
-        <version.richfaces>4.3.4.Final</version.richfaces>
+        <version.richfaces>4.3.7.Final</version.richfaces>
+<!--         <version.richfaces>4.5.0.Alpha2</version.richfaces> -->
+<!--         <version.richfaces>4.5.0.Alpha2</version.richfaces> -->
+
 
         <!-- Version of Hibernate projects -->
         <version.org.hibernate>4.2.0.Final</version.org.hibernate>
@@ -47,7 +50,9 @@
         
         <!-- ??? -->
 		<version.jbossas7>7.2.0.Final</version.jbossas7>		
+        <version.wildfly>8.1.0.Final</version.wildfly>
         <version.org.jboss.spec.jboss.javaee.6.0>3.0.2.Final</version.org.jboss.spec.jboss.javaee.6.0>
+        <version.org.jboss.spec.jboss.javaee.7.0>1.0.0.Final</version.org.jboss.spec.jboss.javaee.7.0>
 
         <version.infinispan>5.2.7.Final</version.infinispan>
 
@@ -173,10 +178,18 @@
                 <version>${version.org.hibernate-jpamodelgen}</version>
             </dependency>
 			
+<!--             <dependency> -->
+<!--                 <groupId>org.jboss.spec</groupId> -->
+<!--                 <artifactId>jboss-javaee-6.0</artifactId> -->
+<!--                 <version>${version.org.jboss.spec.jboss.javaee.6.0}</version> -->
+<!--                 <type>pom</type> -->
+<!--                 <scope>import</scope> -->
+<!--             </dependency> -->
+
             <dependency>
                 <groupId>org.jboss.spec</groupId>
-                <artifactId>jboss-javaee-6.0</artifactId>
-                <version>${version.org.jboss.spec.jboss.javaee.6.0}</version>
+                <artifactId>jboss-javaee-7.0</artifactId>
+                <version>${version.org.jboss.spec.jboss.javaee.7.0}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -267,14 +280,43 @@
                 <version>${version.org.testng}</version>
             </dependency>
 
-			<dependency>
-			  <groupId>org.richfaces</groupId>
-			  <artifactId>richfaces-bom</artifactId>
-			  <version>${version.richfaces}</version>
-			  <type>pom</type>
-			  <scope>import</scope>
-			</dependency>
+<!-- 			<dependency> -->
+<!-- 			  <groupId>org.richfaces</groupId> -->
+<!-- 			  <artifactId>richfaces-bom</artifactId> -->
+<!-- 			  <version>${version.richfaces}</version> -->
+<!-- 			  <type>pom</type> -->
+<!-- 			  <scope>import</scope> -->
+<!-- 			</dependency> -->
 
+                <dependency>
+                    <groupId>org.richfaces.compat</groupId>
+                    <artifactId>richfaces-components-rich</artifactId>
+                    <version>4.5.0-SNAPSHOT</version>
+                </dependency>
+
+<!--            <dependency> -->
+<!--                <groupId>org.richfaces</groupId> -->
+<!--                <artifactId>richfaces-distribution</artifactId> -->
+<!--                <version>${version.richfaces}</version> -->
+<!--                <type>pom</type> -->
+<!--            </dependency> -->
+          <dependency>
+                <groupId>org.richfaces.core</groupId>
+                <artifactId>richfaces-core-impl</artifactId>
+                <version>${version.richfaces}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.richfaces.ui</groupId>
+                <artifactId>richfaces-components-api</artifactId>
+                <version>${version.richfaces}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.richfaces.ui</groupId>
+                <artifactId>richfaces-components-ui</artifactId>
+                <version>${version.richfaces}</version>
+            </dependency>
+
+           
 			<dependency>
 				<groupId>org.jboss.seam</groupId>
 				<artifactId>jboss-seam</artifactId>
@@ -605,7 +647,7 @@
 			<dependency>
 				<groupId>org.javassist</groupId>
 				<artifactId>javassist</artifactId>
-				<version>3.15.0-GA</version>
+				<version>3.18.1-GA</version>
 			</dependency>
 
 			<dependency>
@@ -802,9 +844,16 @@
 				</exclusions>
 			</dependency>
 
+<!--             <dependency> -->
+<!--                 <groupId>org.jboss.spec.javax.el</groupId> -->
+<!--                 <artifactId>jboss-el-api_3.0_spec</artifactId> -->
+<!--                 <version>1.0.3.Final</version> -->
+<!--             </dependency> -->
+
 			<dependency>
 				<groupId>org.jboss.el</groupId>
 				<artifactId>jboss-el</artifactId>
+<!--                  <version>2.0.1.GA</version> -->
 				<version>1.0_02.CR6</version>
 			</dependency>
 
@@ -1167,6 +1216,25 @@
                 <artifactId>infinispan-tree</artifactId>
                 <version>${version.infinispan}</version>
             </dependency>
+            <dependency>
+                <groupId>org.wildfly</groupId>
+                <artifactId>wildfly-arquillian-container-managed</artifactId>
+                <version>${version.wildfly}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.wildfly</groupId>
+                <artifactId>wildfly-arquillian-container-remote</artifactId>
+                <version>${version.wildfly}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.spec.javax.servlet</groupId>
+                <artifactId>jboss-servlet-api_3.0_spec</artifactId>
+                <optional>true</optional>
+                <version>1.0.0.Final</version>
+            </dependency>
+            
 		</dependencies>
 	</dependencyManagement>
 
