--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -42,15 +42,15 @@
 
 
         <!-- Version of Hibernate projects -->
-        <version.org.hibernate>4.2.0.Final</version.org.hibernate>
-        <version.org.hibernate.validator>4.3.1.Final</version.org.hibernate.validator>
-        <version.org.hibernate.search>4.4.0.Final</version.org.hibernate.search>
+        <version.org.hibernate>4.3.5.Final</version.org.hibernate>
+        <version.org.hibernate.validator>5.1.0.Final</version.org.hibernate.validator>
+        <version.org.hibernate.search>4.1.1.Final</version.org.hibernate.search>
         <version.org.hibernate.javax.persistence>1.0.1.Final</version.org.hibernate.javax.persistence>
         <version.org.hibernate-jpamodelgen>1.2.0.Final</version.org.hibernate-jpamodelgen>
         
         <!-- ??? -->
 		<version.jbossas7>7.2.0.Final</version.jbossas7>		
-        <version.wildfly>8.1.0.Final</version.wildfly>
+        <version.wildfly>8.0.0.Final</version.wildfly>
         <version.org.jboss.spec.jboss.javaee.6.0>3.0.2.Final</version.org.jboss.spec.jboss.javaee.6.0>
         <version.org.jboss.spec.jboss.javaee.7.0>1.0.0.Final</version.org.jboss.spec.jboss.javaee.7.0>
 
@@ -97,7 +97,6 @@
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-entitymanager</artifactId>
                 <version>${version.org.hibernate}</version>
-                
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
@@ -265,6 +264,18 @@
                 <version>${version.org.jboss.as.arquillian.container}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.wildfly</groupId>
+                <artifactId>wildfly-arquillian-container-managed</artifactId>
+                <version>${version.wildfly}</version>
+            </dependency>
+        
+            <dependency>
+                <groupId>org.wildfly</groupId>
+                <artifactId>wildfly-arquillian-container-remote</artifactId>
+                <version>${version.wildfly}</version>
+            </dependency>
+ 
            <!-- Recommended JUnit version -->
             <!-- Note that JUnit is preferred framework -->
             <dependency>
@@ -659,7 +670,7 @@
 			<dependency>
 				<groupId>javax.mail</groupId>
 				<artifactId>mail</artifactId>
-				<version>1.4</version>
+				<version>1.5.1</version>
 			</dependency>
 
 			<dependency>
