--- a/seam-integration-tests/pom.xml
+++ b/seam-integration-tests/pom.xml
@@ -267,7 +267,23 @@
                 </plugins>
             </build>
         </profile>
-
+        <profile>
+            <id>arq-wildfly-8-managed</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>arquillian</name>
+                    <value>wildfly-managed-8</value>
+                </property>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.wildfly</groupId>
+                    <artifactId>wildfly-arquillian-container-managed</artifactId>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+        </profile>
         <profile>
             <id>arq-jbossas-7-managed</id>
             <activation>
@@ -322,6 +338,22 @@
                     </testResource>
                 </testResources>
             </build>
+        </profile>
+        <profile>
+            <id>arq-wildfly-8-remote</id>
+            <activation>
+                <property>
+                    <name>arquillian</name>
+                    <value>wildfly-remote-8</value>
+                </property>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.wildfly</groupId>
+                    <artifactId>wildfly-arquillian-container-remote</artifactId>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
         </profile>
         <profile>
             <id>validate</id>
