--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -1239,12 +1239,12 @@
                 <version>${version.wildfly}</version>
             </dependency>
 
-            <dependency>
-                <groupId>org.jboss.spec.javax.servlet</groupId>
-                <artifactId>jboss-servlet-api_3.0_spec</artifactId>
-                <optional>true</optional>
-                <version>1.0.0.Final</version>
-            </dependency>
+<!--             <dependency> -->
+<!--                 <groupId>org.jboss.spec.javax.servlet</groupId> -->
+<!--                 <artifactId>jboss-servlet-api_3.0_spec</artifactId> -->
+<!--                 <optional>true</optional> -->
+<!--                 <version>1.0.0.Final</version> -->
+<!--             </dependency> -->
             
 		</dependencies>
 	</dependencyManagement>
