--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -1238,13 +1238,12 @@
                 <artifactId>wildfly-arquillian-container-remote</artifactId>
                 <version>${version.wildfly}</version>
             </dependency>
-
-<!--             <dependency> -->
-<!--                 <groupId>org.jboss.spec.javax.servlet</groupId> -->
-<!--                 <artifactId>jboss-servlet-api_3.0_spec</artifactId> -->
-<!--                 <optional>true</optional> -->
-<!--                 <version>1.0.0.Final</version> -->
-<!--             </dependency> -->
+            
+            <dependency>
+                <groupId>org.glassfish</groupId>
+                <artifactId>javax.el</artifactId>
+                <version>3.0.0</version>
+            </dependency>
             
 		</dependencies>
 	</dependencyManagement>
