--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>org.jboss.seam</groupId>
     <artifactId>jboss-seam-parent</artifactId>
     <name>Seam Parent</name>
-    <version>2.3.2-SNAPSHOT</version>
+    <version>2.3.2-WILDFLY-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <licenses>
@@ -47,6 +47,7 @@
         <!-- Version string properties -->
         <version.seam>2.3.2-SNAPSHOT</version.seam>
         <version.jbossas7>7.2.0.Final</version.jbossas7>
+        <Version.wildfly>8.1.0.Final</Version.wildfly>
         <version.emma>2.0.5312</version.emma>
 <!--         <version.richfaces.cdk>4.3.1.Final</version.richfaces.cdk> -->
         <version.richfaces.cdk>4.5.0.Alpha2</version.richfaces.cdk>
