--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -36,21 +36,19 @@
 		<version.drools>5.3.3.Final</version.drools>
 		<version.resteasy>3.0.8.Final</version.resteasy>
 		<version.spring>3.1.4.RELEASE</version.spring>
-        <version.richfaces>4.3.7.Final</version.richfaces>
-<!--         <version.richfaces>4.5.0.Alpha2</version.richfaces> -->
-<!--         <version.richfaces>4.5.0.Alpha2</version.richfaces> -->
+        <version.richfaces>4.5.0.Alpha2</version.richfaces>
 
 
         <!-- Version of Hibernate projects -->
         <version.org.hibernate>4.3.5.Final</version.org.hibernate>
         <version.org.hibernate.validator>5.1.0.Final</version.org.hibernate.validator>
         <version.org.hibernate.search>4.1.1.Final</version.org.hibernate.search>
-        <version.org.hibernate.javax.persistence>1.0.1.Final</version.org.hibernate.javax.persistence>
-        <version.org.hibernate-jpamodelgen>1.2.0.Final</version.org.hibernate-jpamodelgen>
+<!--         <version.org.hibernate.javax.persistence>1.0.1.Final</version.org.hibernate.javax.persistence> -->
+<!--         <version.org.hibernate-jpamodelgen>1.2.0.Final</version.org.hibernate-jpamodelgen> -->
         
         <!-- ??? -->
 		<version.jbossas7>7.2.0.Final</version.jbossas7>		
-        <version.wildfly>8.0.0.Final</version.wildfly>
+        <version.wildfly>8.1.0.Final</version.wildfly>
         <version.org.jboss.spec.jboss.javaee.6.0>3.0.2.Final</version.org.jboss.spec.jboss.javaee.6.0>
         <version.org.jboss.spec.jboss.javaee.7.0>1.0.0.Final</version.org.jboss.spec.jboss.javaee.7.0>
 
@@ -176,14 +174,6 @@
                 <artifactId>hibernate-jpamodelgen</artifactId>
                 <version>${version.org.hibernate-jpamodelgen}</version>
             </dependency>
-			
-<!--             <dependency> -->
-<!--                 <groupId>org.jboss.spec</groupId> -->
-<!--                 <artifactId>jboss-javaee-6.0</artifactId> -->
-<!--                 <version>${version.org.jboss.spec.jboss.javaee.6.0}</version> -->
-<!--                 <type>pom</type> -->
-<!--                 <scope>import</scope> -->
-<!--             </dependency> -->
 
             <dependency>
                 <groupId>org.jboss.spec</groupId>
@@ -291,43 +281,28 @@
                 <version>${version.org.testng}</version>
             </dependency>
 
-<!-- 			<dependency> -->
-<!-- 			  <groupId>org.richfaces</groupId> -->
-<!-- 			  <artifactId>richfaces-bom</artifactId> -->
-<!-- 			  <version>${version.richfaces}</version> -->
-<!-- 			  <type>pom</type> -->
-<!-- 			  <scope>import</scope> -->
-<!-- 			</dependency> -->
-
-                <dependency>
-                    <groupId>org.richfaces.compat</groupId>
-                    <artifactId>richfaces-components-rich</artifactId>
-                    <version>4.5.0-SNAPSHOT</version>
-                </dependency>
-
-<!--            <dependency> -->
-<!--                <groupId>org.richfaces</groupId> -->
-<!--                <artifactId>richfaces-distribution</artifactId> -->
-<!--                <version>${version.richfaces}</version> -->
-<!--                <type>pom</type> -->
-<!--            </dependency> -->
-          <dependency>
-                <groupId>org.richfaces.core</groupId>
-                <artifactId>richfaces-core-impl</artifactId>
-                <version>${version.richfaces}</version>
-            </dependency>
+<!--           <dependency> -->
+<!--                 <groupId>org.richfaces.core</groupId> -->
+<!--                 <artifactId>richfaces-core-impl</artifactId> -->
+<!--                 <version>${version.richfaces}</version> -->
+<!--             </dependency> -->
+<!--             <dependency> -->
+<!--                 <groupId>org.richfaces.ui</groupId> -->
+<!--                 <artifactId>richfaces-components-api</artifactId> -->
+<!--                 <version>${version.richfaces}</version> -->
+<!--             </dependency> -->
+<!--             <dependency> -->
+<!--                 <groupId>org.richfaces.ui</groupId> -->
+<!--                 <artifactId>richfaces-components-ui</artifactId> -->
+<!--                 <version>${version.richfaces}</version> -->
+<!--             </dependency> -->
             <dependency>
-                <groupId>org.richfaces.ui</groupId>
-                <artifactId>richfaces-components-api</artifactId>
+                <groupId>org.richfaces</groupId>
+                <artifactId>richfaces-distribution</artifactId>
                 <version>${version.richfaces}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.richfaces.ui</groupId>
-                <artifactId>richfaces-components-ui</artifactId>
-                <version>${version.richfaces}</version>
+                <type>pom</type>
             </dependency>
 
-           
 			<dependency>
 				<groupId>org.jboss.seam</groupId>
 				<artifactId>jboss-seam</artifactId>
