--- a/examples/booking/booking-web/pom.xml
+++ b/examples/booking/booking-web/pom.xml
@@ -54,15 +54,19 @@
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
         </dependency>
+<!--         <dependency> -->
+<!--             <groupId>org.richfaces.ui</groupId> -->
+<!--             <artifactId>richfaces-components-ui</artifactId> -->
+<!--         </dependency> -->
+<!--         <dependency> -->
+<!--             <groupId>org.richfaces.core</groupId> -->
+<!--             <artifactId>richfaces-core-impl</artifactId> -->
+<!--         </dependency> -->
         <dependency>
-            <groupId>org.richfaces.ui</groupId>
-            <artifactId>richfaces-components-ui</artifactId>
+            <groupId>org.richfaces</groupId>
+            <artifactId>richfaces-distribution</artifactId>
+            <type>pom</type>
         </dependency>
-        <dependency>
-            <groupId>org.richfaces.core</groupId>
-            <artifactId>richfaces-core-impl</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>org.jboss.spec.javax.faces</groupId>
             <artifactId>jboss-jsf-api_2.2_spec</artifactId>
