--- a/examples/booking/pom.xml
+++ b/examples/booking/pom.xml
@@ -32,6 +32,7 @@
         <version.war.plugin>2.1.1</version.war.plugin>
         <version.ejb.plugin>2.3</version.ejb.plugin>
         <version.jboss.maven.plugin>7.4.Final</version.jboss.maven.plugin>
+        <version.org.jboss.spec.javax.faces>2.2.7</version.org.jboss.spec.javax.faces>
     </properties>
 
     <modules>
@@ -95,6 +96,12 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+        <dependency>
+            <groupId>org.jboss.spec.javax.faces</groupId>
+            <artifactId>jboss-jsf-api_2.2_spec</artifactId>
+            <scope>provided</scope>
+            <version>${version.org.jboss.spec.javax.faces}</version>
+        </dependency>
 
         </dependencies>
     </dependencyManagement>
