--- a/examples/booking/booking-web/pom.xml
+++ b/examples/booking/booking-web/pom.xml
@@ -35,10 +35,12 @@
         <dependency>
             <groupId>org.jboss.seam</groupId>
             <artifactId>jboss-seam-ui</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.seam</groupId>
             <artifactId>jboss-seam-debug</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
@@ -54,18 +56,18 @@
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
         </dependency>
-<!--         <dependency> -->
-<!--             <groupId>org.richfaces.ui</groupId> -->
-<!--             <artifactId>richfaces-components-ui</artifactId> -->
-<!--         </dependency> -->
-<!--         <dependency> -->
-<!--             <groupId>org.richfaces.core</groupId> -->
-<!--             <artifactId>richfaces-core-impl</artifactId> -->
-<!--         </dependency> -->
+
         <dependency>
             <groupId>org.richfaces</groupId>
             <artifactId>richfaces-distribution</artifactId>
             <type>pom</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.richfaces</groupId>
+            <artifactId>richfaces</artifactId>
+            <version>4.5.0.Alpha3</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.spec.javax.faces</groupId>
