--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -34,14 +34,14 @@
         <version.seam>2.3.2-wildfly-81-SNAPSHOT</version.seam>
 		<version.wicket>1.4.14</version.wicket>
 		<version.drools>5.3.3.Final</version.drools>
-		<version.resteasy>3.0.8.Final</version.resteasy>
+		<version.resteasy>3.0.10.Final</version.resteasy>
 		<version.spring>3.1.4.RELEASE</version.spring>
-        <version.richfaces>4.5.0.Alpha3</version.richfaces>
+        <version.richfaces>4.5.0.Final</version.richfaces>
         <version.org.jboss.spec.javax.faces>2.2.7</version.org.jboss.spec.javax.faces>
 
         <!-- Version of Hibernate projects -->
-        <version.org.hibernate>4.3.5.Final</version.org.hibernate>
-        <version.org.hibernate.validator>5.1.0.Final</version.org.hibernate.validator>
+        <version.org.hibernate>4.3.7.Final</version.org.hibernate>
+        <version.org.hibernate.validator>5.1.3.Final</version.org.hibernate.validator>
         <version.org.hibernate.search>4.1.1.Final</version.org.hibernate.search>
 <!--         <version.org.hibernate.javax.persistence>1.0.1.Final</version.org.hibernate.javax.persistence> -->
 <!--         <version.org.hibernate-jpamodelgen>1.2.0.Final</version.org.hibernate-jpamodelgen> -->
