--- a/examples/booking/booking-web/pom.xml
+++ b/examples/booking/booking-web/pom.xml
@@ -66,7 +66,7 @@
         <dependency>
             <groupId>org.richfaces</groupId>
             <artifactId>richfaces</artifactId>
-            <version>4.5.0.Alpha3</version>
+            <version>4.5.0.Final</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
