--- a/jboss-seam-ui/pom.xml
+++ b/jboss-seam-ui/pom.xml
@@ -15,7 +15,7 @@
             <plugin>
                 <groupId>org.richfaces.cdk</groupId>
                 <artifactId>richfaces-cdk-maven-plugin</artifactId>
-                <version>4.5.0.Alpha2</version>
+                <version>4.5.0.Final</version>
                 <executions>
                     <execution>
                         <phase>generate-sources</phase>
