fix warnings generating tar file

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -59,6 +59,7 @@
 								<descriptor>src/main/assembly/src.xml</descriptor>
 							</descriptors>	
 							<appendAssemblyId>true</appendAssemblyId>
+							<tarLongFileMode>gnu</tarLongFileMode>
 						</configuration>						
 					</execution>
 				</executions>
