--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -10,7 +10,7 @@
 	<licenses>
 		<license>
 			<name>LGPL</name>
-			<url>http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html</url>
+			<url>http://www.gnu.org/licenses/lgpl.txt</url>
 		</license>
 	</licenses>
 
