Add jboss repositoreies to pom.xml
Add Jboss repositories to pom.xml so the build is portable, and you don't need to put it in your personal settings.xml file

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -1191,7 +1191,7 @@
 		<name>Seam Framework</name>
 		<url>http://seamframework.org</url>
 	</organization>
-
+  
 
 	<distributionManagement>
 		<repository>
@@ -1205,5 +1205,39 @@
 			<url>${jboss.snapshots.repo.url}</url>
 		</snapshotRepository>
 	</distributionManagement>
+
+
+      <repositories>
+        <repository>
+          <id>jboss-public-repository-group</id>
+          <name>JBoss Public Maven Repository Group</name>
+          <url>https://repository.jboss.org/nexus/content/groups/public/</url>
+          <layout>default</layout>
+          <releases>
+            <enabled>true</enabled>
+            <updatePolicy>never</updatePolicy>
+          </releases>
+          <snapshots>
+            <enabled>true</enabled>
+            <updatePolicy>never</updatePolicy>
+          </snapshots>
+        </repository>
+      </repositories>
+      <pluginRepositories>
+        <pluginRepository>
+          <id>jboss-public-repository-group</id>
+          <name>JBoss Public Maven Repository Group</name>
+          <url>https://repository.jboss.org/nexus/content/groups/public/</url>
+          <layout>default</layout>
+          <releases>
+            <enabled>true</enabled>
+            <updatePolicy>never</updatePolicy>
+          </releases>
+          <snapshots>
+            <enabled>true</enabled>
+            <updatePolicy>never</updatePolicy>
+          </snapshots>
+        </pluginRepository>
+      </pluginRepositories>
 
 </project>
