add hibernate-envers to distribution package

--- a/jboss-seam/pom.xml
+++ b/jboss-seam/pom.xml
@@ -123,6 +123,11 @@
 			<optional>true</optional>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-envers</artifactId>
+			<optional>true</optional>
+		</dependency>
 		<!-- Maven's "nearest" dependency resolution doesn't take into account 
 			parent dependency management! -->
 
