--- a/jboss-seam/pom.xml
+++ b/jboss-seam/pom.xml
@@ -258,7 +258,7 @@
 
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
-			<artifactId>ehcache</artifactId>
+			<artifactId>ehcache-core</artifactId>
 			<optional>true</optional>
 		</dependency>
 
