--- a/examples/restbay/pom.xml
+++ b/examples/restbay/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jboss.seam.examples</groupId>
     <artifactId>restbay</artifactId>
-    <version>2.3.2-wildfly-81-SNAPSHOT</version>
+    <version>2.3.2-wildfly-10_1_0_Final-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Restbay Example (EE6)</name>
 
