--- a/jboss-seam-wicket/pom.xml
+++ b/jboss-seam-wicket/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>jboss-seam-parent</artifactId>
         <groupId>org.jboss.seam</groupId>
-        <version>2.3.2-wildfly-81-SNAPSHOT</version>
+        <version>2.3.2-wildfly-10_1_0_Final-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
