Upgrade Wildfly version from 8.1.0.Final to 10.1.0.Final - Turning off doclint - Upgrade JBoss jBPM jPDL 3 library from 3.2.10.SP3_seam2 (Hibernate 4) to 3.2.10.SP3_seam2_hibernate5 - Upgrade Arquillian libraries

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -33,7 +33,7 @@
                          <exportAntProperties>true</exportAntProperties>
                          <target>
                             <property name="test.lib.dir" location="target/arquillian/" />
-                            <property name="version.jboss-as7" value="${version.jbossas7}" />
+                            <property name="version.wildfly" value="${version.wildfly}" />
                             <ant antfile="get-arquillian-libs.xml" target="copyarq" />
                         </target>
                     </configuration>
