--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -31,39 +31,38 @@
 
     <properties>
         <!-- Version string properties for integrations-->
-        <version.seam>2.3.2-wildfly-10_1_0_Final-SNAPSHOT</version.seam>
+        <version.seam>2.3.2-1-wildfly_10_1_0_Final-SNAPSHOT</version.seam>
         <version.wicket>1.4.14</version.wicket>
-        <version.drools>5.3.3.Final</version.drools>
-		<version.resteasy>3.0.10.Final</version.resteasy>
+        <version.drools>5.3.3.Final</version.drools>  <!-- Needed for Seam2 compatibility -->
+        <version.mvel2>2.1.9.Final</version.mvel2> <!-- needed for drools 5.3.3 (do not use 2.2) -->
+        <version.janino>2.5.15</version.janino> <!--  Needed for drools 5.3.3 which is needed for seam2 -->
+        <version.resteasy>3.0.19.Final</version.resteasy>
         <version.spring>3.1.4.RELEASE</version.spring>
-        <version.richfaces>4.5.0.Final</version.richfaces>
-        <version.org.jboss.spec.javax.faces>2.2.7</version.org.jboss.spec.javax.faces>
+        <version.richfaces>4.5.13.Final</version.richfaces>
+        <version.org.jboss.spec.javax.faces>2.2.13</version.org.jboss.spec.javax.faces>
 
         <!-- Version of Hibernate projects -->
-        <version.org.hibernate>4.3.7.Final</version.org.hibernate>
-        <version.org.hibernate.validator>5.1.3.Final</version.org.hibernate.validator>
-        <version.org.hibernate.search>4.1.1.Final</version.org.hibernate.search>
-<!--         <version.org.hibernate.javax.persistence>1.0.1.Final</version.org.hibernate.javax.persistence> -->
-<!--         <version.org.hibernate-jpamodelgen>1.2.0.Final</version.org.hibernate-jpamodelgen> -->
+        <version.org.hibernate>5.0.10.Final</version.org.hibernate>
+        <version.org.hibernate.validator>5.2.4.Final</version.org.hibernate.validator>
+        <version.org.hibernate.search>5.5.4.Final</version.org.hibernate.search>
 
         <!-- ??? -->
-        <version.jbossas7>7.2.0.Final</version.jbossas7>
-        <version.wildfly>8.1.0.Final</version.wildfly>
-        <version.org.jboss.spec.jboss.javaee.6.0>3.0.2.Final</version.org.jboss.spec.jboss.javaee.6.0>
-        <version.org.jboss.spec.jboss.javaee.7.0>1.0.0.Final</version.org.jboss.spec.jboss.javaee.7.0>
+        <version.wildfly>10.1.0.Final</version.wildfly>
 
-        <version.infinispan>5.2.7.Final</version.infinispan>
+        <version.infinispan>8.2.4.Final</version.infinispan>
 
         <!-- Test frameworks -->
         <version.junit>4.10</version.junit>
-        <version.org.testng>5.14.10</version.org.testng>
+        <version.org.testng>6.9.10</version.org.testng>
 
-        <!-- Versions of Arquillian and Shrinkwrap -->
-        <version.org.jboss.arquillian>1.1.5.Final</version.org.jboss.arquillian>
-        <version.org.jboss.arquillian.extension.drone>1.2.3.Final</version.org.jboss.arquillian.extension.drone>
-        <version.org.jboss.arquillian.graphene>2.0.0.Final</version.org.jboss.arquillian.graphene>
-        <version.org.jboss.as.arquillian.container>7.2.0.Final</version.org.jboss.as.arquillian.container>
-        <version.org.jboss.shrinkwrap.resolver>2.0.2</version.org.jboss.shrinkwrap.resolver>
+        <version.org.jboss.arquillian>1.1.11.Final</version.org.jboss.arquillian>
+<!--         <version.org.jboss.arquillian>1.1.5.Final</version.org.jboss.arquillian> -->
+        <version.org.jboss.arquillian.graphene>2.1.0.Final</version.org.jboss.arquillian.graphene>
+<!--         <version.org.jboss.arquillian.graphene>2.0.0.Final</version.org.jboss.arquillian.graphene> -->
+
+        <version.org.jboss.arquillian.selenium>2.53.1</version.org.jboss.arquillian.selenium>
+        <version.org.jboss.arquillian.extension.arquillian-drone>2.0.1.Final</version.org.jboss.arquillian.extension.arquillian-drone>
+
 
         <!-- ***************** -->
         <!-- Repository Deployment URLs -->
@@ -78,6 +77,15 @@
             that versions are only specified here, not in sub project poms. All dependencies
             for all modules should be listed out here -->
         <dependencies>
+
+            <dependency>
+                <groupId>org.jboss.spec</groupId>
+                <artifactId>jboss-javaee-7.0</artifactId>
+                <version>1.0.0.Final</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
             <!-- Hibernate ORM sub-modules -->
             <dependency>
                 <groupId>org.hibernate</groupId>
@@ -175,97 +183,6 @@
                 <version>${version.org.hibernate-jpamodelgen}</version>
             </dependency>
 
-            <dependency>
-                <groupId>org.jboss.spec</groupId>
-                <artifactId>jboss-javaee-7.0</artifactId>
-                <version>${version.org.jboss.spec.jboss.javaee.7.0}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-             <!-- Shrinkwrap resolver -->
-            <dependency>
-                <groupId>org.jboss.shrinkwrap.resolver</groupId>
-                <artifactId>shrinkwrap-resolver-bom</artifactId>
-                <version>${version.org.jboss.shrinkwrap.resolver}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-            <!-- Arquillian lets test you your applications in real environment -->
-            <dependency>
-                <groupId>org.jboss.arquillian</groupId>
-                <artifactId>arquillian-bom</artifactId>
-                <version>${version.org.jboss.arquillian}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-            <!-- Arquillian Drone adds support for visual testing of your
-                application -->
-            <dependency>
-                <groupId>org.jboss.arquillian.extension</groupId>
-                <artifactId>arquillian-drone-bom</artifactId>
-                <version>${version.org.jboss.arquillian.extension.drone}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-            <!-- Arquillian Drone bindings for DefaultSelenium based browsers -->
-            <dependency>
-                <groupId>org.jboss.arquillian.extension</groupId>
-                <artifactId>arquillian-drone-selenium-depchain</artifactId>
-                <version>${version.org.jboss.arquillian.extension.drone}</version>
-                <type>pom</type>
-            </dependency>
-
-            <!-- Arquillian Drone bindings for WebDriver based browsers -->
-            <dependency>
-                <groupId>org.jboss.arquillian.extension</groupId>
-                <artifactId>arquillian-drone-webdriver-depchain</artifactId>
-                <version>${version.org.jboss.arquillian.extension.drone}</version>
-                <type>pom</type>
-            </dependency>
-
-            <!-- Arquillian Graphene is an enhanced tool based on Selenium
-                allowing you to test AJAX more easily -->
-            <dependency>
-                <groupId>org.jboss.arquillian.graphene</groupId>
-                <artifactId>graphene-webdriver</artifactId>
-                <version>${version.org.jboss.arquillian.graphene}</version>
-                <type>pom</type>
-            </dependency>
-
-            <!-- Arquillian support for JBoss AS7 container -->
-            <!-- Note: Managed version of container allows Arquillian to
-                control startup and shutdown of the container -->
-            <dependency>
-                <groupId>org.jboss.as</groupId>
-                <artifactId>jboss-as-arquillian-container-managed</artifactId>
-                <version>${version.org.jboss.as.arquillian.container}</version>
-            </dependency>
-
-            <!-- Arquillian support for JBoss AS7 container -->
-            <!-- Note: Remote version of container allows Arquillian to connect
-                to already running container -->
-            <dependency>
-                <groupId>org.jboss.as</groupId>
-                <artifactId>jboss-as-arquillian-container-remote</artifactId>
-                <version>${version.org.jboss.as.arquillian.container}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.wildfly</groupId>
-                <artifactId>wildfly-arquillian-container-managed</artifactId>
-                <version>${version.wildfly}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.wildfly</groupId>
-                <artifactId>wildfly-arquillian-container-remote</artifactId>
-                <version>${version.wildfly}</version>
-            </dependency>
-
            <!-- Recommended JUnit version -->
             <!-- Note that JUnit is preferred framework -->
             <dependency>
@@ -279,6 +196,39 @@
                 <groupId>org.testng</groupId>
                 <artifactId>testng</artifactId>
                 <version>${version.org.testng}</version>
+            </dependency>
+
+            <!-- Arquillian lets test you your applications in real environment -->
+            <dependency>
+                <groupId>org.jboss.arquillian</groupId>
+                <artifactId>arquillian-bom</artifactId>
+                <version>${version.org.jboss.arquillian}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.arquillian.selenium</groupId>
+                <artifactId>selenium-bom</artifactId>
+                <version>${version.org.jboss.arquillian.selenium}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.arquillian.extension</groupId>
+                <artifactId>arquillian-drone-bom</artifactId>
+                <version>${version.org.jboss.arquillian.extension.arquillian-drone}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.arquillian.graphene</groupId>
+                <artifactId>graphene-webdriver</artifactId>
+                <version>${version.org.jboss.arquillian.graphene}</version>
+                <type>pom</type>
+                <scope>test</scope>
             </dependency>
 
 <!--           <dependency> -->
@@ -392,7 +342,7 @@
             <dependency>
                 <groupId>org.jbpm.jbpm3</groupId>
                 <artifactId>jbpm-jpdl</artifactId>
-                <version>3.2.10.SP3_seam2</version>
+                <version>3.2.10.SP3_seam2_hibernate5</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.hibernate</groupId>
@@ -830,6 +780,18 @@
                 </exclusions>
             </dependency>
 
+            <dependency>
+                <groupId>org.mvel</groupId>
+                <artifactId>mvel2</artifactId>
+                <version>${version.mvel2}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>janino</groupId>
+                <artifactId>janino</artifactId>
+                <version>${version.janino}</version>
+            </dependency>
+
 <!--             <dependency> -->
 <!--                 <groupId>org.jboss.spec.javax.el</groupId> -->
 <!--                 <artifactId>jboss-el-api_3.0_spec</artifactId> -->
@@ -1202,18 +1164,6 @@
                 <artifactId>infinispan-tree</artifactId>
                 <version>${version.infinispan}</version>
             </dependency>
-            <dependency>
-                <groupId>org.wildfly</groupId>
-                <artifactId>wildfly-arquillian-container-managed</artifactId>
-                <version>${version.wildfly}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.wildfly</groupId>
-                <artifactId>wildfly-arquillian-container-remote</artifactId>
-                <version>${version.wildfly}</version>
-            </dependency>
-
             <dependency>
                 <groupId>org.glassfish</groupId>
                 <artifactId>javax.el</artifactId>
