--- a/seam-integration-tests/pom.xml
+++ b/seam-integration-tests/pom.xml
@@ -10,7 +10,6 @@
 
     <artifactId>seam-integration-tests</artifactId>
     <name>Seam Integration Tests</name>
-    <!-- We let Maven build a skeleton war with the required dependencies to be used in tests -->
     <packaging>war</packaging>
 
     <build>
@@ -56,8 +55,6 @@
                 </configuration>
             </plugin>
         </plugins>
-
-
     </build>
 
     <dependencies>
@@ -74,6 +71,15 @@
                     <artifactId>jackrabbit-core</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mvel</groupId>
+            <artifactId>mvel2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>janino</groupId>
+            <artifactId>janino</artifactId>
         </dependency>
 
         <dependency>
@@ -120,6 +126,25 @@
         <dependency>
             <groupId>org.jboss.arquillian.protocol</groupId>
             <artifactId>arquillian-protocol-servlet</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.shrinkwrap.resolver</groupId>
+            <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.shrinkwrap.resolver</groupId>
+            <artifactId>shrinkwrap-resolver-impl-maven-archive</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.wildfly.arquillian</groupId>
+            <artifactId>wildfly-arquillian-container-managed</artifactId>
+            <version>1.1.0.Final</version>
             <scope>test</scope>
         </dependency>
 
@@ -259,10 +284,7 @@
                                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                                     <skip>false</skip>
                                     <systemProperties>
-                                        <!-- used by the jbossas-managed-7 profile in arquillian.xml for the jbossHome property-->
-<!--                                         <version.jbossas7>${version.jbossas7}</version.jbossas7> -->
                                         <version.wildfly>${version.wildfly}</version.wildfly>
-                                        <jacoco.agent>${jacoco.agent}</jacoco.agent>
                                     </systemProperties>
                                 </configuration>
                             </execution>
@@ -270,105 +292,6 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile>
-        <profile>
-            <id>arq-wildfly-8-managed</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-                <property>
-                    <name>arquillian</name>
-                    <value>wildfly-managed-8</value>
-                </property>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>org.wildfly</groupId>
-                    <artifactId>wildfly-arquillian-container-managed</artifactId>
-                    <scope>test</scope>
-                </dependency>
-            </dependencies>
-            <build>
-                <testResources>
-                    <testResource>
-                    <directory>src/test/resources</directory>
-                </testResource>
-                <testResource>
-                    <directory>src/test/resources-wildfly-8</directory>
-                </testResource>
-                </testResources>
-            </build>
-
-        </profile>
-        <profile>
-            <id>arq-jbossas-7-managed</id>
-            <activation>
-<!-- 				<activeByDefault>true</activeByDefault> -->
-                <property>
-                    <name>arquillian</name>
-                    <value>jbossas-managed-7</value>
-                </property>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>org.jboss.as</groupId>
-                    <artifactId>jboss-as-arquillian-container-managed</artifactId>
-                    <scope>test</scope>
-                </dependency>
-            </dependencies>
-            <build>
-                <testResources>
-                    <testResource>
-                    <directory>src/test/resources</directory>
-                </testResource>
-                <testResource>
-                    <directory>src/test/resources-jbossas-7</directory>
-                </testResource>
-                </testResources>
-            </build>
-        </profile>
-
-        <profile>
-            <id>arq-jbossas-7-remote</id>
-                <activation>
-                    <property>
-                        <name>arquillian</name>
-                        <value>jbossas-remote-7</value>
-                    </property>
-                </activation>
-
-            <dependencies>
-                <dependency>
-                    <groupId>org.jboss.as</groupId>
-                    <artifactId>jboss-as-arquillian-container-remote</artifactId>
-                    <scope>test</scope>
-                </dependency>
-            </dependencies>
-            <build>
-                <testResources>
-                    <testResource>
-                        <directory>src/test/resources</directory>
-                    </testResource>
-                    <testResource>
-                        <directory>src/test/resources-jbossas-7</directory>
-                    </testResource>
-                </testResources>
-            </build>
-        </profile>
-        <profile>
-            <id>arq-wildfly-8-remote</id>
-            <activation>
-                <property>
-                    <name>arquillian</name>
-                    <value>wildfly-remote-8</value>
-                </property>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>org.wildfly</groupId>
-                    <artifactId>wildfly-arquillian-container-remote</artifactId>
-                    <scope>test</scope>
-                </dependency>
-            </dependencies>
         </profile>
         <profile>
             <id>validate</id>
@@ -408,37 +331,6 @@
                                 </validationSet>
                             </validationSets>
                         </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <profile>
-            <id>jacoco</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-                <property>
-                    <name>jacoco</name>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.jacoco</groupId>
-                        <artifactId>jacoco-maven-plugin</artifactId>
-                        <configuration>
-                            <excludes>
-                                <exclude>org.jboss.seam.test.*</exclude>
-                            </excludes>
-                            <propertyName>jacoco.agent</propertyName>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>prepare-agent</goal>
-                                </goals>
-                            </execution>
-                        </executions>
                     </plugin>
                 </plugins>
             </build>
