--- a/jboss-seam-mail/pom.xml
+++ b/jboss-seam-mail/pom.xml
@@ -24,15 +24,14 @@
         <dependency>
             <groupId>org.jboss.spec.javax.faces</groupId>
             <artifactId>jboss-jsf-api_2.2_spec</artifactId>
+            <scope>provided</scope>
         </dependency>
-
 
         <dependency>
             <groupId>javax.mail</groupId>
             <artifactId>mail</artifactId>
             <scope>provided</scope>
         </dependency>
-
 
         <dependency>
             <groupId>org.testng</groupId>
