--- a/examples/booking/booking-ejb/pom.xml
+++ b/examples/booking/booking-ejb/pom.xml
@@ -165,6 +165,22 @@
             </build>
         </profile>
         <profile>
+            <id>arq-jbossas-7-managed</id>
+            <activation>
+                <property>
+                    <name>arquillian</name>
+                    <value>jbossas-managed-7</value>
+                </property>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.jboss.as</groupId>
+                    <artifactId>jboss-as-arquillian-container-managed</artifactId>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
             <id>arq-wildfly-8-managed</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
@@ -193,25 +209,38 @@
             <properties>
                 <jndiPattern>java:app/seam-booking/#{ejbName}</jndiPattern>
                 <distributable>false</distributable>
-
             </properties>
-
         </profile>
         <profile>
-            <id>arq-jbossas-7-managed</id>
+            <id>arq-wildfly-10-managed</id>
             <activation>
+                <activeByDefault>true</activeByDefault>
                 <property>
                     <name>arquillian</name>
-                    <value>jbossas-managed-7</value>
+                    <value>wildfly-managed-8</value>
                 </property>
             </activation>
             <dependencies>
                 <dependency>
-                    <groupId>org.jboss.as</groupId>
-                    <artifactId>jboss-as-arquillian-container-managed</artifactId>
+                    <groupId>org.wildfly</groupId>
+                    <artifactId>wildfly-arquillian-container-managed</artifactId>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
+            <build>
+                <testResources>
+                    <testResource>
+                    <directory>src/test/resources</directory>
+                </testResource>
+                <testResource>
+                    <directory>src/test/resources-wildfly-10</directory>
+                </testResource>
+                </testResources>
+            </build>
+            <properties>
+                <jndiPattern>java:app/seam-booking/#{ejbName}</jndiPattern>
+                <distributable>false</distributable>
+            </properties>
         </profile>
 
         <profile>
