--- a/jboss-seam-gen/pom.xml
+++ b/jboss-seam-gen/pom.xml
@@ -100,6 +100,17 @@
          <scope>runtime</scope>
       </dependency>
       
+             <dependency>
+                <groupId>org.richfaces</groupId>
+                <artifactId>richfaces-core</artifactId>
+                <scope>runtime</scope>   
+            </dependency>
+			<dependency>
+                <groupId>org.richfaces</groupId>
+                <artifactId>richfaces-a4j</artifactId>
+                <scope>runtime</scope>                
+            </dependency>
+      
       <dependency>
          <groupId>org.eclipse.core</groupId>
          <artifactId>runtime</artifactId>
