Update jbpm reference to custom package

--- a/jboss-seam-ui/pom.xml
+++ b/jboss-seam-ui/pom.xml
@@ -161,7 +161,7 @@
 
 
         <dependency>
-            <groupId>org.jbpm.jbpm3</groupId>
+            <groupId>com.github.albfernandez</groupId>
             <artifactId>jbpm-jpdl</artifactId>
             <optional>true</optional>
             <exclusions>
