--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -376,9 +376,9 @@
 			</dependency>
 
 			<dependency>
-				<groupId>org.jbpm.jbpm3</groupId>
+				<groupId>com.github.albfernandez</groupId>
 				<artifactId>jbpm-jpdl</artifactId>
-				<version>3.2.10-1-SP3_seam2_hibernate5-SNAPSHOT</version>
+				<version>3.2.10-1-SP3_seam2_hibernate5</version>
 				<exclusions>
 					<exclusion>
 						<groupId>org.hibernate</groupId>
