--- a/examples/drools/drools-ear/pom.xml
+++ b/examples/drools/drools-ear/pom.xml
@@ -35,7 +35,7 @@
          <type>ejb</type>
       </dependency>
       <dependency>
-      	<groupId>org.jbpm.jbpm3</groupId>
+      	<groupId>com.github.albfernandez</groupId>
       	<artifactId>jbpm-jpdl</artifactId>
       	<exclusions>
       		<exclusion>
