--- a/examples/drools/drools-ejb/pom.xml
+++ b/examples/drools/drools-ejb/pom.xml
@@ -48,7 +48,7 @@
          <artifactId>drools-templates</artifactId>
       </dependency>
       <dependency>
-         <groupId>org.jbpm.jbpm3</groupId>
+         <groupId>com.github.albfernandez</groupId>
          <artifactId>jbpm-jpdl</artifactId>
       </dependency>
       <dependency>
