--- a/examples/dvdstore/dvdstore-ejb/pom.xml
+++ b/examples/dvdstore/dvdstore-ejb/pom.xml
@@ -98,7 +98,7 @@
       </dependency>
 
       <dependency>
-         <groupId>org.jbpm.jbpm3</groupId>
+         <groupId>com.github.albfernandez</groupId>
          <artifactId>jbpm-jpdl</artifactId>
          <exclusions>
             <exclusion>
