--- a/examples/numberguess/numberguess-ejb/pom.xml
+++ b/examples/numberguess/numberguess-ejb/pom.xml
@@ -87,7 +87,7 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.jbpm.jbpm3</groupId>
+            <groupId>com.github.albfernandez</groupId>
             <artifactId>jbpm-jpdl</artifactId>
             <exclusions>
                 <exclusion>
