--- a/jboss-seam/pom.xml
+++ b/jboss-seam/pom.xml
@@ -348,7 +348,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jbpm.jbpm3</groupId>
+            <groupId>com.github.albfernandez</groupId>
             <artifactId>jbpm-jpdl</artifactId>
             <optional>true</optional>
         </dependency>
