--- a/seam-integration-tests/pom.xml
+++ b/seam-integration-tests/pom.xml
@@ -59,7 +59,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.jbpm.jbpm3</groupId>
+            <groupId>com.github.albfernandez</groupId>
             <artifactId>jbpm-jpdl</artifactId>
             <exclusions>
                 <exclusion>
