fix javadoc for jdk8

--- a/pom.xml
+++ b/pom.xml
@@ -337,6 +337,9 @@
                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
+                    <configuration>
+                       <additionalparam>${javadoc.opts}</additionalparam>
+                    </configuration>
                 </plugin>
 				<!-- just for jboss-seam core as it is EJB type not jar -->
 				<plugin>
