--- a/jboss-seam/pom.xml
+++ b/jboss-seam/pom.xml
@@ -57,6 +57,7 @@
                     <stylesheetfile>jdstyle.css</stylesheetfile>
                     <doctitle>JBoss Seam ${project.name} API ${project.version}</doctitle> <!-- Used by javadoc:javadoc goal -->
                     <detectOfflineLinks>false</detectOfflineLinks>
+                    <additionalparam>${javadoc.opts}</additionalparam>
                 </configuration>
                 <executions>
                     <execution>
