--- a/pom.xml
+++ b/pom.xml
@@ -288,6 +288,11 @@
                 <artifactId>richfaces-a4j</artifactId>
                 <version>${version.richfaces}</version>                
             </dependency>
+            <dependency>
+                <groupId>org.richfaces</groupId>
+                <artifactId>richfaces</artifactId>
+                <version>${version.richfaces}</version>                
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
