--- a/jboss-seam-flex/pom.xml
+++ b/jboss-seam-flex/pom.xml
@@ -70,6 +70,7 @@
             <plugins>
                  <plugin>
                      <artifactId>maven-dependency-plugin</artifactId>
+                     <version>${version.dependency.plugin}</version>
                      <executions>
                             <execution>
                                 <id>copy-dependencies</id>
