--- a/jboss-seam-resteasy/pom.xml
+++ b/jboss-seam-resteasy/pom.xml
@@ -96,6 +96,7 @@
             <plugins>
                  <plugin>
                      <artifactId>maven-dependency-plugin</artifactId>
+                     <version>${version.dependency.plugin}</version>
                      <executions>
                             <execution>
                                 <id>copy-dependencies</id>
