--- a/jboss-seam-ui/pom.xml
+++ b/jboss-seam-ui/pom.xml
@@ -228,6 +228,7 @@
                 <plugins>
                     <plugin>
                         <artifactId>maven-dependency-plugin</artifactId>
+                        <version>${version.dependency.plugin}</version>
                         <executions>
                             <execution>
                                 <id>copy-dependencies</id>
