--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -43,7 +43,7 @@
 		<version.org.jboss.spec.javax.faces>2.2.13</version.org.jboss.spec.javax.faces>
 
         <!-- Version of Hibernate projects -->
-        <version.org.hibernate>5.0.12.Final</version.org.hibernate>
+        <version.org.hibernate>5.0.14.Final-redhat-1</version.org.hibernate>
         <version.org.hibernate.validator>5.2.5.Final</version.org.hibernate.validator>
         <version.org.hibernate.search>5.5.7.Final</version.org.hibernate.search>
         <version.org.hibernate.javax.persistence>1.0.1.Final</version.org.hibernate.javax.persistence>
@@ -1262,6 +1262,16 @@
             <enabled>true</enabled>
             <updatePolicy>never</updatePolicy>
           </snapshots>
+        </repository>
+        <repository>
+        	<id>redhat-public-repository</id>
+        	<name>Redhat Public Repository GA</name>
+        	<url>https://maven.repository.redhat.com/ga/</url>
+        	<layout>default</layout>
+        	<releases>
+        		<enabled>true</enabled>
+        		<updatePolicy>never</updatePolicy>
+        	</releases>
         </repository>
       </repositories>
       <pluginRepositories>
