--- a/jboss-seam/pom.xml
+++ b/jboss-seam/pom.xml
@@ -461,7 +461,7 @@
                                     <excludeGroupIds>org.jboss.seam</excludeGroupIds>
                                     <excludeClassifiers>sources, project, distribution</excludeClassifiers>
                                     <outputDirectory>../jar-dependencies</outputDirectory>
-                                    
+                                    <stripVersion>true</stripVersion>
                                     <type>jar</type>
                                     <transitive>true</transitive>
                                 </configuration>
